namespace Observer;

public interface IObserver
{
    public void Update(string mail);
}